log
Fri 29 Mar 2024 08:46:17 PM UTC: 
 tests:  0|6
total_score: 0/70
4b071b3
Fri 29 Mar 2024 08:48:51 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c:37:6: error: expected identifier or ‘(’ before ‘return’
   37 |      return NULL;
      |      ^~~~~~
list.c:38:1: error: expected identifier or ‘(’ before ‘}’ token
   38 | }
      | ^
Compilation failed
fee074e
Fri 29 Mar 2024 08:49:04 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
 tests:  1|5
total_score: 10/70
91ea1aa
Fri 29 Mar 2024 08:51:35 PM UTC: 
 list.c | 9 +++++----
 1 file changed, 5 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:5: error: ‘list’ undeclared (first use in this function); did you mean ‘List’?
   33 |     list->head = NULL;
      |     ^~~~
      |     List
list.c:33:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:32:12: error: unused variable ‘lista’ [-Werror=unused-variable]
   32 |     List * lista = (List *)malloc(sizeof(List));
      |            ^~~~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
   37 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bb60bb7
Fri 29 Mar 2024 08:51:44 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:34:9: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   34 |     list->size = 0;
      |         ^~
Compilation failed
b156c2a
Fri 29 Mar 2024 08:52:50 PM UTC: 
 list.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  1|5
total_score: 10/70
a2a38b0
Fri 29 Mar 2024 08:55:18 PM UTC: 
 list.c | 3 +++
 1 file changed, 3 insertions(+)
 tests:  1|5
total_score: 10/70
5e727c9
Fri 29 Mar 2024 08:56:58 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:40:41: error: ‘Node’ has no member named ‘key’
   40 |   if(list->current) return list->current->key;
      |                                         ^~
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
f693b52
Fri 29 Mar 2024 08:57:16 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:41:1: error: control reaches end of non-void function [-Werror=return-type]
   41 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
48fc2f3
Fri 29 Mar 2024 08:57:37 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:42:1: error: control reaches end of non-void function [-Werror=return-type]
   42 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
896ccd4
